--- a/01_feature_selection-Annie.ipynb
+++ b/01_feature_selection-Annie.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 376,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,8 +49,8 @@
     "from sklearn.preprocessing import OneHotEncoder, LabelEncoder, StandardScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.svm import LinearSVC\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.metrics import mean_squared_error, confusion_matrix, roc_auc_score, auc, average_precision_score\n",
+    "from sklearn.compose import ColumnTransformer, make_column_transformer\n",
+    "from sklearn.metrics import mean_squared_error, confusion_matrix, roc_auc_score, auc, average_precision_score, accuracy_score\n",
     "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
     "# unbalanced sets\n",
     "from imblearn.under_sampling import RandomUnderSampler\n",
@@ -2121,6 +2121,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# grid search params\n",
+    "param_grid_lr = {'logreg__C': np.logspace(-4, 1, 6)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Baseline training and testing\n",
+    "lr_model = GridSearchCV(lr_pipe, param_grid = param_grid_lr, cv=5).fit(targets_encoded, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print best params\n",
+    "lr_best_params = lr_model.best_params_\n",
+    "\n",
+    "# Store best score\n",
+    "lr_model_cv_score = max(lr_model.cv_results_['mean_test_score'])\n",
+    "model_scores['lr_model_cv_score'] = lr_model_cv_score"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2228,8 +2264,8 @@
    "outputs": [],
    "source": [
     "# Defining ColumnTransformer\n",
-    "preprocessor = ColumnTransformer(transformers=[\n",
-    "                                                (\"dummies\", make_pipeline(SimpleImputer(strategy=\"most_frequent\"),\n",
+    "preprocessor = ColumnTransformer(transformers=[(\"scalar\", StandardScaler(), cont_vars),\n",
+    "                                              (\"dummies\", make_pipeline(SimpleImputer(strategy='most_frequent'),\n",
     "                                                                        OneHotEncoder(handle_unknown='ignore')), categorical)\n",
     "                                             ], remainder='passthrough')\n",
     "\n",
@@ -2318,8 +2354,8 @@
    "outputs": [],
    "source": [
     "# Defining ColumnTransformer\n",
-    "preprocessor = ColumnTransformer(transformers=[\n",
-    "                                                (\"dummies\", make_pipeline(SimpleImputer(strategy=\"most_frequent\"),\n",
+    "preprocessor = ColumnTransformer(transformers=[(\"scalar\", StandardScaler(), cont_vars),\n",
+    "                                              (\"dummies\", make_pipeline(SimpleImputer(strategy='most_frequent'),\n",
     "                                                                        OneHotEncoder(handle_unknown='ignore')), categorical)\n",
     "                                             ], remainder='passthrough')\n",
     "\n",
@@ -2342,7 +2378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2352,7 +2388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2366,9 +2402,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 253,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'baseline_cv_acc': 0.8667515190390075,\n",
+       "  'baseline_cv_roc': 0.944150982940946,\n",
+       "  'imputed_model_cv_score_acc': 0.8311528813506189,\n",
+       "  'imputed_model_cv_score_roc': 0.9114729386211978,\n",
+       "  'target_enc_model_cv_score_acc': 0.9257049227050917,\n",
+       "  'target_enc_model_cv_score_roc': 0.9767201208979379,\n",
+       "  'svc_model_cv_score': 0.915867082646574,\n",
+       "  'lr_model_cv_score': 0.9255209559689193,\n",
+       "  'rf_model_cv_score': 0.9723849187661879,\n",
+       "  'xgb_model_cv_score': 0.9569181186720037},\n",
+       " {'xgb__n_estimators': 50})"
+      ]
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model_scores, xgb_best_params"
    ]
@@ -2389,21 +2446,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Remove columns to be removed\n",
-    "X_val = X_val.drop(columns='columns_to_drop')\n",
+    "X_val_dropped = X_val.drop(columns=columns_to_drop)\n",
     "\n",
     "# Target based encoding\n",
     "# # Manually fill in NA values\n",
     "for col in target_based_encoding:\n",
-    "    X_val[col].fillna(\"Missing\", inplace=True)\n",
+    "    X_val_dropped[col].fillna(\"Missing\", inplace=True)\n",
     "\n",
     "# Transforming using fitted target encoder\n",
     "# target_enc = TargetEncoder(verbose=1, cols=target_based_encoding, return_df=True, handle_unknown='ignore')\n",
-    "targets_encoded_val = target_enc.transform(X_val.reset_index())"
+    "targets_encoded_val = target_enc.transform(X_val_dropped.reset_index())\n",
+    "targets_encoded_val.drop(columns='index', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 45302 entries, 0 to 45301\n",
+      "Data columns (total 15 columns):\n",
+      "index                                                               45302 non-null int64\n",
+      "Related_Product_Indicator                                           45302 non-null object\n",
+      "Applicable_Manufacturer_or_Applicable_GPO_Making_Payment_State      42686 non-null object\n",
+      "Indicate_Drug_or_Biological_or_Device_or_Medical_Supply_1           37064 non-null object\n",
+      "Change_Type                                                         45302 non-null object\n",
+      "Associated_Drug_or_Biological_NDC_1                                 45265 non-null float64\n",
+      "Submitting_Applicable_Manufacturer_or_Applicable_GPO_Name           45238 non-null float64\n",
+      "Total_Amount_of_Payment_USDollars                                   45302 non-null float64\n",
+      "Applicable_Manufacturer_or_Applicable_GPO_Making_Payment_Country    45302 non-null object\n",
+      "Recipient_State                                                     45262 non-null object\n",
+      "Product_Category_or_Therapeutic_Area_1                              45232 non-null float64\n",
+      "Recipient_City                                                      44561 non-null float64\n",
+      "Dispute_Status_for_Publication                                      45302 non-null object\n",
+      "Recipient_Country                                                   45283 non-null object\n",
+      "Covered_or_Noncovered_Indicator_1                                   41156 non-null object\n",
+      "dtypes: float64(5), int64(1), object(9)\n",
+      "memory usage: 5.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For some reason, the Total_Amount_of_Payment_USDollars column\n",
+    "# gets converted to type 'object'\n",
+    "# so changing that\n",
+    "targets_encoded_val.Total_Amount_of_Payment_USDollars = targets_encoded_val.Total_Amount_of_Payment_USDollars.astype(float)\n",
+    "targets_encoded_val.info()\n"
    ]
   },
   {
@@ -2415,7 +2515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2424,55 +2524,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [],
    "source": [
+    "validation_set = targets_encoded_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 409,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove nans from targets_encoded\n",
+    "for col in target_based_encoding:\n",
+    "    validation_set[col].fillna(0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 412,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
     "# Logistic Regression\n",
-    "lr_val_predict = lr_model.predict(targets_encoded_val)\n",
+    "lr_val_predict = lr_model.predict(validation_set)\n",
     "val_scores['logreg_val'] = accuracy_score(y_val, lr_val_predict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 413,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'logreg_val': 0.9205774579488765}"
+      ]
+     },
+     "execution_count": 413,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 414,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Linear SVC\n",
-    "svc_val_predict = svc_model.predict(targets_encoded_val)\n",
+    "svc_val_predict = svc_model.predict(validation_set)\n",
     "val_scores['svc_val'] = accuracy_score(y_val, svc_val_predict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Random Forest\n",
-    "rf_val_predict = rf_model.predict(targets_encoded_val)\n",
+    "rf_val_predict = rf_model.predict(validation_set)\n",
     "val_scores['rf_val'] = accuracy_score(y_val, rf_val_predict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Gradient Boosting\n",
-    "xgb_val_predict = xgb_model.predict(targets_encoded_val)\n",
+    "xgb_val_predict = xgb_model.predict(validation_set)\n",
     "val_scores['gb_val'] = accuracy_score(y_val, xgb_val_predict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 418,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'logreg_val': 0.9205774579488765,\n",
+       " 'svc_val': 0.9110414551233941,\n",
+       " 'rf_val': 0.9719659176195311,\n",
+       " 'gb_val': 0.9532250231777847}"
+      ]
+     },
+     "execution_count": 418,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "val_scoresres"
+    "val_scores"
    ]
   },
   {
@@ -2491,13 +2647,6 @@
     "# Random Forest\n",
     "rf_model.steps[0]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
