--- a/Homework 3 - AL3273 & AM5022.ipynb
+++ b/Homework 3 - AL3273 & AM5022.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 560,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
     "\n",
     "# plotting\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "from sklearn.tree import export_graphviz\n",
     "%matplotlib inline\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -2753,6 +2753,290 @@
     "# plt.yticks(range(10), feature_names[indices])\n",
     "plt.xlabel('Relative Importance')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Keeping only top 10 variables by importance "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 562,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Related_Product_Indicator',\n",
+       " 'Applicable_Manufacturer_or_Applicable_GPO_Making_Payment_State',\n",
+       " 'Indicate_Drug_or_Biological_or_Device_or_Medical_Supply_1',\n",
+       " 'Change_Type',\n",
+       " 'Applicable_Manufacturer_or_Applicable_GPO_Making_Payment_Country',\n",
+       " 'Recipient_State',\n",
+       " 'Dispute_Status_for_Publication',\n",
+       " 'Recipient_Country',\n",
+       " 'Covered_or_Noncovered_Indicator_1']"
+      ]
+     },
+     "execution_count": 562,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categorical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 536,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['x4_Canada',\n",
+       " 'x4_Switzerland',\n",
+       " 'x2_Biological',\n",
+       " 'x7_United States Minor Outlying Islands',\n",
+       " 'x8_Covered',\n",
+       " 'Recipient_City',\n",
+       " 'x8_Non-Covered',\n",
+       " 'Product_Category_or_Therapeutic_Area_1',\n",
+       " 'Associated_Drug_or_Biological_NDC_1',\n",
+       " 'Submitting_Applicable_Manufacturer_or_Applicable_GPO_Name']"
+      ]
+     },
+     "execution_count": 536,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_feature_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 538,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vars_to_keep = ['Submitting_Applicable_Manufacturer_or_Applicable_GPO_Name',\n",
+    "                'Associated_Drug_or_Biological_NDC_1',\n",
+    "               'Product_Category_or_Therapeutic_Area_1',\n",
+    "               'Recipient_City',\n",
+    "               'Covered_or_Noncovered_Indicator_1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 539,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Submitting_Applicable_Manufacturer_or_Applicable_GPO_Name</th>\n",
+       "      <th>Associated_Drug_or_Biological_NDC_1</th>\n",
+       "      <th>Product_Category_or_Therapeutic_Area_1</th>\n",
+       "      <th>Recipient_City</th>\n",
+       "      <th>Covered_or_Noncovered_Indicator_1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.429687e-01</td>\n",
+       "      <td>0.523640</td>\n",
+       "      <td>0.229508</td>\n",
+       "      <td>Covered</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.069573e-08</td>\n",
+       "      <td>0.220053</td>\n",
+       "      <td>0.107527</td>\n",
+       "      <td>Covered</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.592631</td>\n",
+       "      <td>6.429687e-01</td>\n",
+       "      <td>0.822977</td>\n",
+       "      <td>0.261852</td>\n",
+       "      <td>Non-Covered</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.004041</td>\n",
+       "      <td>9.533898e-03</td>\n",
+       "      <td>0.078244</td>\n",
+       "      <td>0.225352</td>\n",
+       "      <td>Covered</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.186290</td>\n",
+       "      <td>1.444043e-02</td>\n",
+       "      <td>0.144172</td>\n",
+       "      <td>0.050000</td>\n",
+       "      <td>Covered</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Submitting_Applicable_Manufacturer_or_Applicable_GPO_Name  \\\n",
+       "0                                           0.000000           \n",
+       "1                                           0.000000           \n",
+       "2                                           0.592631           \n",
+       "3                                           0.004041           \n",
+       "4                                           0.186290           \n",
+       "\n",
+       "   Associated_Drug_or_Biological_NDC_1  \\\n",
+       "0                         6.429687e-01   \n",
+       "1                         2.069573e-08   \n",
+       "2                         6.429687e-01   \n",
+       "3                         9.533898e-03   \n",
+       "4                         1.444043e-02   \n",
+       "\n",
+       "   Product_Category_or_Therapeutic_Area_1  Recipient_City  \\\n",
+       "0                                0.523640        0.229508   \n",
+       "1                                0.220053        0.107527   \n",
+       "2                                0.822977        0.261852   \n",
+       "3                                0.078244        0.225352   \n",
+       "4                                0.144172        0.050000   \n",
+       "\n",
+       "  Covered_or_Noncovered_Indicator_1  \n",
+       "0                           Covered  \n",
+       "1                           Covered  \n",
+       "2                       Non-Covered  \n",
+       "3                           Covered  \n",
+       "4                           Covered  "
+      ]
+     },
+     "execution_count": 539,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reduced = targets_encoded[vars_to_keep]\n",
+    "reduced.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 567,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining ColumnTransformer\n",
+    "preprocessor = ColumnTransformer(transformers=[(\"dummies\", make_pipeline(SimpleImputer(strategy='most_frequent'),\n",
+    "                                                                        OneHotEncoder(handle_unknown='ignore')), ['Covered_or_Noncovered_Indicator_1'])\n",
+    "                                             ], remainder='passthrough')\n",
+    "\n",
+    "# Create pipeplines\n",
+    "rf_pipe_reduced = Pipeline(steps=[(\"preprocessor\", preprocessor),\n",
+    "                           (\"rf\", RandomForestClassifier(max_depth=50)) \n",
+    "                          ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 568,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# training and testing\n",
+    "rf_model_reduced = rf_pipe_reduced.fit(reduced, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 570,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced_val = targets_encoded_val[vars_to_keep]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 571,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9280384971965918"
+      ]
+     },
+     "execution_count": 571,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Store best score\n",
+    "reduced_predictions = rf_model_reduced.predict(reduced_val)\n",
+    "reduced_accuracy = accuracy_score(reduced_predictions, y_val)\n",
+    "reduced_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
