--- a/Homework 3 - AL3273 & AM5022.ipynb
+++ b/Homework 3 - AL3273 & AM5022.ipynb
@@ -2251,13 +2251,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Baseline Random Forest"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 234,
    "metadata": {},
@@ -2344,7 +2337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## XGB Classifier"
+    "## Gradient Boosting Classifier"
    ]
   },
   {
@@ -2557,26 +2550,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'logreg_val': 0.9205774579488765}"
-      ]
-     },
-     "execution_count": 413,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "val_scores"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 414,
    "metadata": {},
    "outputs": [],
@@ -2737,7 +2710,6 @@
     "plt.figure(1)\n",
     "plt.title('Feature Importances')\n",
     "plt.barh(top_feature_names, feature_importances[indices], color='b', align='center')\n",
-    "# plt.yticks(range(10), feature_names[indices])\n",
     "plt.xlabel('Relative Importance')"
    ]
   },
