--- a/Homework 3 - AL3273 & AM5022.ipynb
+++ b/Homework 3 - AL3273 & AM5022.ipynb
@@ -1102,7 +1102,7 @@
    "cell_type": "code",
    "execution_count": 157,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2028,7 +2028,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Any Model ~ Task 4"
+    "## Any Model with Parameter Tuning ~ Task 4"
    ]
   },
   {
@@ -2982,11 +2982,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "So removing less important and irrelevant features very slightly hampers the performance on the validation set. However, the model now is extremely simple as compared to the original one. We consider this very slight (< 1%) trading-off of prediction accuracy in favor of the high model simplicity justified."
+   ]
   },
   {
    "cell_type": "code",
